--- a/client/kuip-site.html
+++ b/client/kuip-site.html
@@ -16,14 +16,16 @@
 </template>
 
 <template name="home">
-  {{> carousel}}
-  {{> services}}
-  {{> contact}}
+  <div class="content">
+    {{> carousel}}
+    {{> services}}
+    {{> contact}}
+  </div>
 </template>
 
 
 <template name="carousel">
-  <div class="content">
+  
 
   <div id="sync1" class="owl-carousel">
     <div class="item">
@@ -58,27 +60,26 @@
   <div class="content2">
   <div id="sync2" class="owl-carousel">
     <div class="item">
-      <img src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD/0.05">
     </div>
     <div class="item">
-      <img src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW/0.05">
     </div>
     <div class="item">
-      <img src="http://oroboro-oroboro.rhcloud.com/file/8F8xZdTH3cR3sCkC7/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/8F8xZdTH3cR3sCkC7/0.05">
     </div>
     <div class="item">
-      <img src="http://oroboro-oroboro.rhcloud.com/file/uNavXWyQpL27iqmxs/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/uNavXWyQpL27iqmxs/0.05">
     </div>
     <div class="item">
-      <img src="http://oroboro-oroboro.rhcloud.com/file/Zs6r8kFHXtsFu89JB/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/Zs6r8kFHXtsFu89JB/0.05">
     </div>
     <div class="item">
-      <img src="http://oroboro-oroboro.rhcloud.com/file/oqHzDWD8ghTvurt2i/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/oqHzDWD8ghTvurt2i/0.05">
     </div>
     <div class="item">
-      <img src="http://oroboro-oroboro.rhcloud.com/file/uKrNHyXAogKvr3ruK/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/uKrNHyXAogKvr3ruK/0.05">
     </div>
-  </div>
   </div>
   </div>
 </template>
@@ -92,7 +93,7 @@
 
   <div class="ui one column wide grid items container">
     <div class="item">
-      <div class="ui large image">
+      <div class="ui medium image">
         <img src="http://oroboro-oroboro.rhcloud.com/file/TXx6LvjycGttc6Pba">
       </div>
       <div class="content">
@@ -105,7 +106,7 @@
       </div>
     </div>
     <div class="item" style="margin-top: 60px !important;">
-      <div class="ui large image">
+      <div class="ui medium image">
         <img src="/images/meteor-logo.png">
       </div>
       <div class="content">
@@ -123,7 +124,7 @@
       </div>
     </div>
     <div class="item" style="margin-top: 60px !important;">
-      <div class="ui large image">
+      <div class="ui medium image">
         <img src="http://oroboro-oroboro.rhcloud.com/file/SzvW7PjwnchXPFwnj">
       </div>
       <div class="content">
@@ -131,6 +132,22 @@
         <div class="meta bigtext">
           <p>We programmed a complex SVG editor combining powerful SVG editing features with creating and maintaining an online database for sharing, showcasing works, live-collaboration on projects and even creating and performing tutorials and presentations. <a href="https://vimeo.com/129704353" target="_blank">Oroboro</a></p>
           <p>We have custom algorithms for morphing, processing SVG paths</p>
+        </div>
+      </div>
+    </div>
+    <div class="item" style="margin-top: 60px !important;">
+      <div class="ui medium image">
+        <img src="http://oroboro-oroboro.rhcloud.com/file/D8igRFEaJ3DCr5peD">
+      </div>
+      <div class="content">
+        <a><div class="ui huge header">Design Patterns in OOP</div></a>
+        <div class="meta bigtext">
+          <p>Because we want to give you extensibility, clean code and keep you up to date with the latest technology changes.</p>
+          <p> Check out our tutorials in EcmaScript 6, JavaScript 5, with StarUML : </p>
+          <div class="flex">
+            <a href="http://loredanacirstea.github.io/js-design-patterns/" target="_blank" style="margin-right: 10px;"><img class="ui tiny image" src="http://oroboro-oroboro.rhcloud.com/file/2fAfrtoN4mn2hMbLj"></a>
+            <a href="http://loredanacirstea.github.io/es6-design-patterns/" target="_blank"><img class="ui tiny image" src="http://oroboro-oroboro.rhcloud.com/file/xxK9nGEDYPswcS97y"></a>
+          </div>
         </div>
       </div>
     </div>
@@ -143,10 +160,13 @@
       Contact
     </div>
   </a>
-  <div class="ui one column wide grid center aligned container bigtext" style="display: block !important;">
-    <div><a href="mailto:kuip.ltd@gmail.com">kuip.ltd@gmail.com</a></div>
-    <br>
-    <div>18-19 College Green, Dublin 2, Ireland</div>
+  <div class="ui one column wide grid center aligned container bigtext">
+    <div class="ui column">
+      <img class="ui medium centered image" src="http://oroboro-oroboro.rhcloud.com/file/QyDYLckr8RHEJti4k">
+      <div><a href="mailto:kuip.ltd@gmail.com">kuip.ltd@gmail.com</a></div>
+      <br>
+      <div>18-19 College Green, Dublin 2, Ireland</div>
+    </div>
   </div>
   <br><br><br><br><br><br><br><br>
 </template>
