--- a/client/layout.html
+++ b/client/layout.html
@@ -1,8 +1,15 @@
+<head>
+  <title>Meteor UML Mobile Technical Development</title>
+  <meta name="description" content="Kuip Limited offers Web and Mobile Development services, using Meteor.JS, SVG, Ecmascript 6 and UML and API specs creation services.">
+  <meta name="keywords" content="Meteor, Meteor.JS, UML, SVG, EcmaScript 6, JavaScript, API, REST, Web Development, Mobile, resolution independent">
+  <meta name="author" content="Kuip Limited">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <template name="layout">
 
   <div id="wrapper">
     {{> Template.dynamic template=header}}
-    
     
     <div id="main">
       {{> Template.dynamic template=main}}
