--- a/client/kuip-development.html
+++ b/client/kuip-development.html
@@ -1,5 +1,10 @@
 <template name="header">
+  <div class="headerImage">
+    <img class="himage" src="http://oroboro-oroboro.rhcloud.com/file/PtF4CBByFzGSyYLFH" alt="The highlands are waiting for a Meteor.js">
+  </div>
 </template>
+
+
 <template name="navbar">
   <div class="ui sticky fixed bottom center aligned" style="right:0px;left:0px;text-align:center;">
     <div class="ui three item inverted grey menu">
@@ -12,6 +17,7 @@
     </div>
   </div>
 </template>
+
 <template name="footer">
 </template>
 
@@ -23,62 +29,61 @@
   </div>
 </template>
 
-
 <template name="carousel">
   
 
   <div id="sync1" class="owl-carousel">
     <div class="item">
-      <a href="http://owlgraphic.com/owlcarousel/demos/sync.html" target="_blank"><img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD"></a>
+      <a href="http://owlgraphic.com/owlcarousel/demos/sync.html" target="_blank"><img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD" alt="On a fine day like today, an inspired team like our"></a>
       
     </div>
     <div class="item">
-      <a href="http://owlgraphic.com/owlcarousel/demos/sync.html" target="_blank"><img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW"></a>
+      <a href="http://owlgraphic.com/owlcarousel/demos/sync.html" target="_blank"><img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW" alt="Will keep you efficient despite any a challenge"></a>
     </div>
     <div class="item">
       <a href="http://orobo.go.ro:4500/prev/j9SLxp3ffTWwGJkTY" target="_blank">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/8F8xZdTH3cR3sCkC7">
+      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/8F8xZdTH3cR3sCkC7" alt="We run on technical hay the sort of UML and API specs creation">
     </a>
     </div>
     <div class="item">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/uNavXWyQpL27iqmxs">
-    </div>
-    <div class="item">
       <a href="https://vimeo.com/129704353" target="_blank">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/Zs6r8kFHXtsFu89JB">
+      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/Zs6r8kFHXtsFu89JB" alt="and resolution independent vectorial tools (SVG and Geo editing)">
     </a>
     </div>
     <div class="item">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/oqHzDWD8ghTvurt2i">
+      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/uNavXWyQpL27iqmxs" alt="We build on any device and keep your business up in the cloud">
+    </div>
+    <div class="item">
+      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/oqHzDWD8ghTvurt2i" alt="This is Kuip. Welcome to out Keep.">
     </div>
     <div class="item">
       <a href="https://vimeo.com/129704353" target="_blank">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/uKrNHyXAogKvr3ruK">
+      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/uKrNHyXAogKvr3ruK" alt="Demo created with our vectorial editor (Oroboro)">
     </a>
     </div>
   </div>
   <div class="content2">
   <div id="sync2" class="owl-carousel">
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD/0.05" alt="On a fine day like today, an inspired team like our">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW/0.05" alt="Will keep you efficient despite any a challenge">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/8F8xZdTH3cR3sCkC7/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/8F8xZdTH3cR3sCkC7/0.05" alt="We run on technical hay the sort of UML and API specs creation">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/uNavXWyQpL27iqmxs/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/Zs6r8kFHXtsFu89JB/0.05" alt="and resolution independent vectorial tools (SVG and Geo editing)">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/Zs6r8kFHXtsFu89JB/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/uNavXWyQpL27iqmxs/0.05" alt="We build on any device and keep your business up in the cloud">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/oqHzDWD8ghTvurt2i/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/oqHzDWD8ghTvurt2i/0.05" alt="This is Kuip. Welcome to out Keep.">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/uKrNHyXAogKvr3ruK/0.05">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/uKrNHyXAogKvr3ruK/0.05" alt="Demo created with our vectorial editor (Oroboro)">
     </div>
   </div>
   </div>
@@ -86,7 +91,7 @@
 
 <template name="services">
   <a name="services">
-    <div class="ui horizontal divider">
+    <div class="ui horizontal divider services">
       Services
     </div>
   </a>
@@ -94,7 +99,7 @@
   <div class="ui one column wide grid items container">
     <div class="item">
       <div class="ui medium image">
-        <img src="http://oroboro-oroboro.rhcloud.com/file/TXx6LvjycGttc6Pba">
+        <img src="http://oroboro-oroboro.rhcloud.com/file/TXx6LvjycGttc6Pba" alt="UML , API - specifications consultancy">
       </div>
       <div class="content">
         <a><div class="ui huge header">Specs Consultancy</div></a>
@@ -107,7 +112,7 @@
     </div>
     <div class="item" style="margin-top: 60px !important;">
       <div class="ui medium image">
-        <img src="/images/meteor-logo.png">
+        <img src="/images/meteor-logo.png" alt="Meteor.JS Web and Mobile Development">
       </div>
       <div class="content">
         <a class="ui link" href="https://www.meteor.com/" target="_blank"><div class="ui huge header">Meteor.JS Development</div></a>
@@ -125,7 +130,7 @@
     </div>
     <div class="item" style="margin-top: 60px !important;">
       <div class="ui medium image">
-        <img src="http://oroboro-oroboro.rhcloud.com/file/SzvW7PjwnchXPFwnj">
+        <img src="http://oroboro-oroboro.rhcloud.com/file/AJZ9iacT2oipw9poF" alt="SVG expertise - Oroboro">
       </div>
       <div class="content">
         <a><div class="ui huge header">SVG Expertise</div></a>
@@ -137,7 +142,7 @@
     </div>
     <div class="item" style="margin-top: 60px !important;">
       <div class="ui medium image">
-        <img src="http://oroboro-oroboro.rhcloud.com/file/D8igRFEaJ3DCr5peD">
+        <img src="http://oroboro-oroboro.rhcloud.com/file/D8igRFEaJ3DCr5peD" alt="Design patterns in OOP - Ecmascript 6, Javascript 5, StarUML">
       </div>
       <div class="content">
         <a><div class="ui huge header">Design Patterns in OOP</div></a>
@@ -145,8 +150,8 @@
           <p>Because we want to give you extensibility, clean code and keep you up to date with the latest technology changes.</p>
           <p> Check out our tutorials in EcmaScript 6, JavaScript 5, with StarUML : </p>
           <div class="flex">
-            <a href="http://loredanacirstea.github.io/js-design-patterns/" target="_blank" style="margin-right: 10px;"><img class="ui tiny image" src="http://oroboro-oroboro.rhcloud.com/file/2fAfrtoN4mn2hMbLj"></a>
-            <a href="http://loredanacirstea.github.io/es6-design-patterns/" target="_blank"><img class="ui tiny image" src="http://oroboro-oroboro.rhcloud.com/file/xxK9nGEDYPswcS97y"></a>
+            <a href="http://loredanacirstea.github.io/js-design-patterns/" target="_blank" style="margin-right: 10px;"><img class="ui tiny image" src="http://oroboro-oroboro.rhcloud.com/file/2fAfrtoN4mn2hMbLj" alt="Design patterns in OOP Javascript"></a>
+            <a href="http://loredanacirstea.github.io/es6-design-patterns/" target="_blank"><img class="ui tiny image" src="http://oroboro-oroboro.rhcloud.com/file/xxK9nGEDYPswcS97y"  alt="Design patterns in OOP Ecmascript 6"></a>
           </div>
         </div>
       </div>
@@ -162,10 +167,12 @@
   </a>
   <div class="ui one column wide grid center aligned container bigtext">
     <div class="ui column">
-      <img class="ui medium centered image" src="http://oroboro-oroboro.rhcloud.com/file/QyDYLckr8RHEJti4k">
+      <img class="ui medium centered image" src="http://oroboro-oroboro.rhcloud.com/file/7KLScbwkfqdqry4T5" alt="KUIP LIMITED">
       <div><a href="mailto:kuip.ltd@gmail.com">kuip.ltd@gmail.com</a></div>
       <br>
       <div>18-19 College Green, Dublin 2, Ireland</div>
+      <br>
+      <div>© 2015 Kuip Limited</div>
     </div>
   </div>
   <br><br><br><br><br><br><br><br>
