added local dev algorithm

--- a/client/kuip-development.html
+++ b/client/kuip-development.html
@@ -34,14 +34,14 @@
 
   <div id="sync1" class="owl-carousel">
     <div class="item">
-      <a href="http://owlgraphic.com/owlcarousel/demos/sync.html" target="_blank"><img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD" alt="On a fine day like today, an inspired team like our"></a>
+      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD" alt="On a fine day like today, an inspired team like our">
       
     </div>
     <div class="item">
-      <a href="http://owlgraphic.com/owlcarousel/demos/sync.html" target="_blank"><img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW" alt="Will keep you efficient despite any a challenge"></a>
+      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW" alt="Will keep you efficient despite any a challenge">
     </div>
     <div class="item">
-      <a href="http://orobo.go.ro:4500/prev/j9SLxp3ffTWwGJkTY" target="_blank">
+      <a href="/dev-algorithm" target="_blank">
       <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/8F8xZdTH3cR3sCkC7" alt="We run on technical hay the sort of UML and API specs creation">
     </a>
     </div>
@@ -106,7 +106,10 @@
         <div class="meta bigtext">
           <p>Tired of inextensible projects and personally training project new-commers ?</p>
           <p>We offer consultancy on creating UML and API specifications for your project. </p>
-          <p> Heck! We have made our own UML editor in SVG and Meteor and have our own <a class="ui link" href="http://orobo.go.ro:4500/prev/j9SLxp3ffTWwGJkTY" target="_blank">UML for project tackling.</a></p>
+          <p> Heck! We have made our own UML editor in SVG and Meteor and have our own 
+            <!--<a class="ui link" href="http://orobo.go.ro:4500/prev/j9SLxp3ffTWwGJkTY" target="_blank">UML for project tackling.</a>-->
+            <a class="ui link" href="/dev-algorithm" target="_blank">UML for project tackling.</a>
+          </p>
         </div>
       </div>
     </div>
@@ -176,4 +179,23 @@
     </div>
   </div>
   <br><br><br><br><br><br><br><br>
+</template>
+
+<template name="devalg">
+  <div class="ui grid">
+    <div class="ui three column doubling row">
+      <div class="ui column">
+        <img class="ui large centered image" src="images/GeneralAlgorithm.png">
+      </div>
+      <div class="ui column">
+        <img class="ui big image" src="images/PrototypeDev.png">
+      </div>
+      <div class="ui column">
+        <img class="ui big image" src="images/FinalTransaction.png">
+      </div>
+    </div>
+    <div class="ui ten wide centered column">
+      <img class="ui huge centered image" src="images/SpecificationsDev.png">
+    </div>
+  </div>
 </template>
