--- a/client/kuip-development.html
+++ b/client/kuip-development.html
@@ -1,6 +1,7 @@
 <template name="header">
   <div class="headerImage">
-    <img class="himage" src="http://oroboro-oroboro.rhcloud.com/file/PtF4CBByFzGSyYLFH" alt="The highlands are waiting for a Meteor.js">
+    <!--<img class="himage" src="http://oroboro-oroboro.rhcloud.com/file/PtF4CBByFzGSyYLFH" alt="The highlands are waiting for a Meteor.js">-->
+    <img class="himage" src="bg.svg" alt="The highlands are waiting for a Meteor.js">
   </div>
 </template>
 
@@ -34,7 +35,7 @@
 
   <div id="sync1" class="owl-carousel">
     <div class="item">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD" alt="On a fine day like today, an inspired team like our">
+      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD" alt="On a fine day like today, an inspired team like ours">
       
     </div>
     <div class="item">
@@ -65,7 +66,7 @@
   <div class="content2">
   <div id="sync2" class="owl-carousel">
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD/0.05" alt="On a fine day like today, an inspired team like our">
+      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD/0.05" alt="On a fine day like today, an inspired team like ours">
     </div>
     <div class="item">
       <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW/0.05" alt="Will keep you efficient despite any a challenge">
@@ -170,7 +171,8 @@
   </a>
   <div class="ui one column wide grid center aligned container bigtext">
     <div class="ui column">
-      <img class="ui medium centered image" src="http://oroboro-oroboro.rhcloud.com/file/7KLScbwkfqdqry4T5" alt="KUIP LIMITED">
+      <img class="ui small centered image" src="http://oroboro-oroboro.rhcloud.com/file/s6tozJhaEWjyQPRck" alt="KUIP LIMITED">
+      <br>
       <div><a href="mailto:kuip.ltd@gmail.com">kuip.ltd@gmail.com</a></div>
       <br>
       <div>18-19 College Green, Dublin 2, Ireland</div>
