--- a/client/kuip-development.html
+++ b/client/kuip-development.html
@@ -175,7 +175,7 @@
       <br>
       <div><a href="mailto:kuip.ltd@gmail.com">kuip.ltd@gmail.com</a></div>
       <br>
-      <div>18-19 College Green, Dublin 2, Ireland</div>
+      <div>18-19 College Green, Dublin 2, Ireland, EirCode: D02 VH77</div>
       <br>
       <div>© 2015 Kuip Limited</div>
     </div>
