replaced Oroboro API with static SVG files

--- a/client/kuip-development.html
+++ b/client/kuip-development.html
@@ -36,56 +36,56 @@
 
   <div id="sync1" class="owl-carousel">
     <div class="item">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD" alt="On a fine day like today, an inspired team like ours">
+      <img class="stage" src="images/svg/DSTH6LATvdPaBTBHD.svg" alt="On a fine day like today, an inspired team like ours">
       
     </div>
     <div class="item">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW" alt="Will keep you efficient despite any a challenge">
+      <img class="stage" src="images/svg/Gi4Hk42DwQ7hEkWJW.svg" alt="Will keep you efficient despite any a challenge">
     </div>
     <div class="item">
       <a href="/dev-algorithm" target="_blank">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/8F8xZdTH3cR3sCkC7" alt="We run on technical hay the sort of UML and API specs creation">
+      <img class="stage" src="images/svg/8F8xZdTH3cR3sCkC7.svg" alt="We run on technical hay the sort of UML and API specs creation">
     </a>
     </div>
     <div class="item">
       <a href="https://www.youtube.com/watch?v=HqkqUyvPWRk" target="_blank">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/Zs6r8kFHXtsFu89JB" alt="and resolution independent vectorial tools (SVG and Geo editing)">
+      <img class="stage" src="images/svg/Zs6r8kFHXtsFu89JB.svg" alt="and resolution independent vectorial tools (SVG and Geo editing)">
     </a>
     </div>
     <div class="item">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/uNavXWyQpL27iqmxs" alt="We build on any device and keep your business up in the cloud">
+      <img class="stage" src="images/svg/uNavXWyQpL27iqmxs.svg" alt="We build on any device and keep your business up in the cloud">
     </div>
     <div class="item">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/oqHzDWD8ghTvurt2i" alt="This is Kuip. Welcome to out Keep.">
+      <img class="stage" src="images/svg/oqHzDWD8ghTvurt2i" alt="This is Kuip. Welcome to out Keep.">
     </div>
     <div class="item">
       <a href="https://www.youtube.com/watch?v=0y3kNjLsKK0&list=PL323JufuD9JBh3p4P5atyV40B0SXrU99Y" target="_blank">
-      <img class="stage" src="http://oroboro-oroboro.rhcloud.com/file/uKrNHyXAogKvr3ruK" alt="Demo created with our vectorial editor (Oroboro)">
+      <img class="stage" src="images/svg/uKrNHyXAogKvr3ruK.svg" alt="Demo created with our vectorial editor (Oroboro)">
     </a>
     </div>
   </div>
   <div class="content2">
   <div id="sync2" class="owl-carousel">
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/DSTH6LATvdPaBTBHD/0.05" alt="On a fine day like today, an inspired team like ours">
+      <img class="lazyOwl" data-src="images/svg/DSTH6LATvdPaBTBHD_005.svg" alt="On a fine day like today, an inspired team like ours">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/Gi4Hk42DwQ7hEkWJW/0.05" alt="Will keep you efficient despite any a challenge">
+      <img class="lazyOwl" data-src="images/svg/Gi4Hk42DwQ7hEkWJW_005.svg" alt="Will keep you efficient despite any a challenge">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/8F8xZdTH3cR3sCkC7/0.05" alt="We run on technical hay the sort of UML and API specs creation">
+      <img class="lazyOwl" data-src="images/svg/8F8xZdTH3cR3sCkC7_005.svg" alt="We run on technical hay the sort of UML and API specs creation">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/Zs6r8kFHXtsFu89JB/0.05" alt="and resolution independent vectorial tools (SVG and Geo editing)">
+      <img class="lazyOwl" data-src="images/svg/Zs6r8kFHXtsFu89JB_005.svg" alt="and resolution independent vectorial tools (SVG and Geo editing)">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/uNavXWyQpL27iqmxs/0.05" alt="We build on any device and keep your business up in the cloud">
+      <img class="lazyOwl" data-src="images/svg/uNavXWyQpL27iqmxs_005.svg" alt="We build on any device and keep your business up in the cloud">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/oqHzDWD8ghTvurt2i/0.05" alt="This is Kuip. Welcome to out Keep.">
+      <img class="lazyOwl" data-src="images/svg/oqHzDWD8ghTvurt2i_005.svg" alt="This is Kuip. Welcome to out Keep.">
     </div>
     <div class="item">
-      <img class="lazyOwl" data-src="http://oroboro-oroboro.rhcloud.com/file/uKrNHyXAogKvr3ruK/0.05" alt="Demo created with our vectorial editor (Oroboro)">
+      <img class="lazyOwl" data-src="images/svg/uKrNHyXAogKvr3ruK_005.svg" alt="Demo created with our vectorial editor (Oroboro)">
     </div>
   </div>
   </div>
@@ -94,7 +94,7 @@
 <template name="attention">
   <div class="ui icon message" id="attention">
     <!--<i class="info icon"></i>-->
-    <img class="ui tiny circular image" src="http://oroboro-oroboro.rhcloud.com/file/HFsgKaiXyYk68YfX7" id="attentionImage">
+    <img class="ui tiny circular image" src="images/svg/HFsgKaiXyYk68YfX7.svg" id="attentionImage">
     <div class="content">
       <div class="header">
         So, where is the poney?
@@ -114,7 +114,7 @@
   <div class="ui one column wide grid items container">
     <div class="item">
       <div class="ui medium image">
-        <img src="http://oroboro-oroboro.rhcloud.com/file/TXx6LvjycGttc6Pba" alt="UML , API - specifications consultancy">
+        <img src="images/svg/TXx6LvjycGttc6Pba.svg" alt="UML , API - specifications consultancy">
       </div>
       <div class="content">
         <a><div class="ui huge header">Specs Consultancy</div></a>
@@ -148,7 +148,7 @@
     </div>
     <div class="item" style="margin-top: 60px !important;">
       <div class="ui medium image">
-        <img src="http://oroboro-oroboro.rhcloud.com/file/AJZ9iacT2oipw9poF" alt="SVG expertise - Oroboro">
+        <img src="images/svg/AJZ9iacT2oipw9poF.svg" alt="SVG expertise - Oroboro">
       </div>
       <div class="content">
         <a><div class="ui huge header">SVG Expertise</div></a>
@@ -160,7 +160,7 @@
     </div>
     <div class="item" style="margin-top: 60px !important;">
       <div class="ui medium image">
-        <img src="http://oroboro-oroboro.rhcloud.com/file/vEEpL9nGcRkxE9qNt" alt="Experimental Technology">
+        <img src="images/svg/vEEpL9nGcRkxE9qNt.svg" alt="Experimental Technology">
       </div>
       <div class="content">
         <a><div class="ui huge header">Experimental Technology</div></a>
@@ -171,7 +171,7 @@
     </div>
     <div class="item" style="margin-top: 60px !important;">
       <div class="ui medium image">
-        <img src="http://oroboro-oroboro.rhcloud.com/file/D8igRFEaJ3DCr5peD" alt="Design patterns in OOP - Ecmascript 6, Javascript 5, StarUML">
+        <img src="images/svg/D8igRFEaJ3DCr5peD.svg" alt="Design patterns in OOP - Ecmascript 6, Javascript 5, StarUML">
       </div>
       <div class="content">
         <a><div class="ui huge header">Design Patterns in OOP</div></a>
@@ -179,8 +179,8 @@
           <p>Because we want to give you extensibility, clean code and keep you up to date with the latest technology changes.</p>
           <p> Check out our tutorials in EcmaScript 6, JavaScript 5, with StarUML : </p>
           <div class="flex">
-            <a href="http://loredanacirstea.github.io/js-design-patterns/" target="_blank" style="margin-right: 10px;"><img class="ui tiny image" src="http://oroboro-oroboro.rhcloud.com/file/2fAfrtoN4mn2hMbLj" alt="Design patterns in OOP Javascript"></a>
-            <a href="http://loredanacirstea.github.io/es6-design-patterns/" target="_blank"><img class="ui tiny image" src="http://oroboro-oroboro.rhcloud.com/file/xxK9nGEDYPswcS97y"  alt="Design patterns in OOP Ecmascript 6"></a>
+            <a href="http://loredanacirstea.github.io/js-design-patterns/" target="_blank" style="margin-right: 10px;"><img class="ui tiny image" src="images/svg/2fAfrtoN4mn2hMbLj.svg" alt="Design patterns in OOP Javascript"></a>
+            <a href="http://loredanacirstea.github.io/es6-design-patterns/" target="_blank"><img class="ui tiny image" src="images/svg/xxK9nGEDYPswcS97y.svg"  alt="Design patterns in OOP Ecmascript 6"></a>
           </div>
         </div>
       </div>
@@ -204,13 +204,13 @@
   </a>
   <div class="ui one column wide grid center aligned container bigtext">
     <div class="ui column">
-      <img class="ui small centered image" src="http://oroboro-oroboro.rhcloud.com/file/s6tozJhaEWjyQPRck" alt="KUIP LIMITED">
+      <img class="ui small centered image" src="images/svg/s6tozJhaEWjyQPRck.svg" alt="KUIP LIMITED">
       <br>
       <div><a href="mailto:kuip.ltd@gmail.com">kuip.ltd@gmail.com</a></div>
       <br>
       <div>18-19 College Green, Dublin 2, Ireland, EirCode: D02 VH77</div>
       <br>
-      <div>© 2015 Kuip Limited</div>
+      <div>© 2016 Kuip Limited</div>
     </div>
   </div>
   <br><br><br><br><br><br><br><br>
